<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name" >

    <PreferenceCategory
        android:key="@string/set_mswat"
        android:title="@string/set_mswat" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="log"
            android:summary="@string/log"
            android:title="@string/log1" />

        <ListPreference
            android:defaultValue="@string/default_controller"
            android:entries="@array/mode"
            android:entryValues="@array/modeValues"
            android:key="controller"
            android:summary="@string/set_controller"
            android:title="@string/controller" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="audio"
            android:summary="@string/audioFeed"
            android:title="@string/audioFeed1" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="calibration"
            android:summary="@string/calibration"
            android:title="@string/calibration1" />
        
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="visual"
            android:summary="@string/visualFeed"
            android:title="@string/visualFeed1" />
    </PreferenceCategory>

</PreferenceScreen>